temporal-verifier/tests/examples/snapshots/basic1.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "-- print tests/examples/basic1.fly"
expression: combined_stdout_stderr
---
mutable p: bool
mutable q: bool

assume !p & !q & (always p' = (p | q) & q' = q)
assert always !p
proof {
  invariant !p
  invariant !q
}

======== STDERR: ===========

