temporal-verifier/tests/examples/snapshots/defs.fly.inline.1.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--name=inline.1 -- inline tests/examples/defs.fly"
expression: combined_stdout_stderr
---
sort thread
mutable p(thread): bool
mutable q(thread): bool
immutable t0: thread

assume exists t:thread. p(t) & q(t) & (p(t) & q(t))' = (p(t) & q(t)) | t = t0
assume forall t:thread. !q(t)
assert p(t0)
proof {

}

======== STDERR: ===========

