temporal-verifier/tests/examples/snapshots/lockserver_buggy.fly.1.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--name=1 -- sat-check --bound 'node=3' --print-timing false '--depth=20' tests/examples/lockserver_buggy.fly"
expression: combined_stdout_stderr
---
starting translation...
starting search...
found counterexample:
state 0:
lock_msg(@node_0) = false
lock_msg(@node_1) = false
lock_msg(@node_2) = false
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 1:
lock_msg(@node_0) = true
lock_msg(@node_1) = false
lock_msg(@node_2) = false
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 2:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = false
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 3:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = true
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 4:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = true
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 5:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = true
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 6:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = true
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 7:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = true
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 8:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = true
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 9:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = true
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 10:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = true
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 11:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = true
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 12:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = false
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = true
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = false

state 13:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = false
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = false
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = true
server_holds_lock = false

state 14:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = false
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = true
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = false

state 15:
lock_msg(@node_0) = true
lock_msg(@node_1) = true
lock_msg(@node_2) = false
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = true
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 16:
lock_msg(@node_0) = false
lock_msg(@node_1) = true
lock_msg(@node_2) = false
grant_msg(@node_0) = true
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = true
holds_lock(@node_0) = false
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = false

state 17:
lock_msg(@node_0) = false
lock_msg(@node_1) = true
lock_msg(@node_2) = false
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = true
holds_lock(@node_0) = true
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = false

state 18:
lock_msg(@node_0) = false
lock_msg(@node_1) = true
lock_msg(@node_2) = false
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = true
holds_lock(@node_0) = true
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = true

state 19:
lock_msg(@node_0) = false
lock_msg(@node_1) = false
lock_msg(@node_2) = false
grant_msg(@node_0) = false
grant_msg(@node_1) = true
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = true
holds_lock(@node_0) = true
holds_lock(@node_1) = false
holds_lock(@node_2) = false
server_holds_lock = false

state 20:
lock_msg(@node_0) = false
lock_msg(@node_1) = false
lock_msg(@node_2) = false
grant_msg(@node_0) = false
grant_msg(@node_1) = false
grant_msg(@node_2) = false
unlock_msg(@node_0) = false
unlock_msg(@node_1) = false
unlock_msg(@node_2) = true
holds_lock(@node_0) = true
holds_lock(@node_1) = true
holds_lock(@node_2) = false
server_holds_lock = false


======== STDERR: ===========

