temporal-verifier/tests/examples/snapshots/lockserver_buggy.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "-- bdd-check --bound 'node=3' --print-timing false tests/examples/lockserver_buggy.fly"
expression: combined_stdout_stderr
---
starting translation...
starting search...
found counterexample!
state 0:
grant_msg: {}
holds_lock: {}
lock_msg: {}
server_holds_lock: {[], }
unlock_msg: {}

state 1:
grant_msg: {}
holds_lock: {}
lock_msg: {[0], }
server_holds_lock: {[], }
unlock_msg: {}

state 2:
grant_msg: {[0], }
holds_lock: {}
lock_msg: {}
server_holds_lock: {}
unlock_msg: {}

state 3:
grant_msg: {[0], }
holds_lock: {}
lock_msg: {[0], }
server_holds_lock: {}
unlock_msg: {}

state 4:
grant_msg: {[0], }
holds_lock: {}
lock_msg: {[0], [1], }
server_holds_lock: {}
unlock_msg: {}

state 5:
grant_msg: {}
holds_lock: {[0], }
lock_msg: {[0], [1], }
server_holds_lock: {}
unlock_msg: {}

state 6:
grant_msg: {}
holds_lock: {}
lock_msg: {[0], [1], }
server_holds_lock: {}
unlock_msg: {[0], }

state 7:
grant_msg: {}
holds_lock: {}
lock_msg: {[0], [1], }
server_holds_lock: {[], }
unlock_msg: {[0], }

state 8:
grant_msg: {[1], }
holds_lock: {}
lock_msg: {[0], }
server_holds_lock: {}
unlock_msg: {[0], }

state 9:
grant_msg: {[1], }
holds_lock: {}
lock_msg: {[0], }
server_holds_lock: {[], }
unlock_msg: {[0], }

state 10:
grant_msg: {}
holds_lock: {[1], }
lock_msg: {[0], }
server_holds_lock: {[], }
unlock_msg: {[0], }

state 11:
grant_msg: {[0], }
holds_lock: {[1], }
lock_msg: {}
server_holds_lock: {}
unlock_msg: {[0], }

state 12:
grant_msg: {}
holds_lock: {[0], [1], }
lock_msg: {}
server_holds_lock: {}
unlock_msg: {[0], }


======== STDERR: ===========

