temporal-verifier/tests/examples/snapshots/simple_defs.fly.inline.1.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--name=inline.1 -- inline tests/examples/simple_defs.fly"
expression: combined_stdout_stderr
---
sort thread
mutable p(thread): bool
mutable q: bool
immutable t0: thread

assume q
assume q' = q
assume !q
assert p(t0)
proof {

}

======== STDERR: ===========

